--- a/charts/sonarqube/Chart.yaml
+++ b/charts/sonarqube/Chart.yaml
@@ -13,7 +13,7 @@ icon: https://www.sonarqube.org/assets/logo-31ad3115b1b4b120f3d1efd63e6b13ac9f1f
 sources:
   - https://github.com/SonarSource/docker-sonarqube
 maintainers:
-  - name: rjkernick
+name: sonarqube
     email: rjkernick@gmail.com
-  - name: tsiddique
+name: sonarqube
     email: tsiddique@live.com
